--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -16,7 +16,9 @@
    "outputs": [],
    "source": [
     "import vaderSentiment\n",
-    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer"
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "from preprocessing_final import pre_process\n",
+    "from helpers import *"
    ]
   },
   {
@@ -47,18 +49,174 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data_/test_data.txt') as f:\n",
-    "    test = f.readlines()"
+    "with open('twitter-datasets/test_data.txt') as f:\n",
+    "    real_test = f.readlines()\n",
+    "real_test={'data':real_test}\n",
+    "real_test=pd.DataFrame(real_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4096</th>\n",
+       "      <td>4097 take prom harry ! bring friend me</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>892</th>\n",
+       "      <td>893 can never get date a night owl i  negative...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6026</th>\n",
+       "      <td>6027 ulti amate fighting championship classics...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8235</th>\n",
+       "      <td>8236 starving there food take away sounds  pos...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5335</th>\n",
+       "      <td>5336 not go school today spent whole day w | bae</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7975</th>\n",
+       "      <td>7976 ie7 users please note ! previous access  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6742</th>\n",
+       "      <td>6743 aww yeah eco  positive pretty  negative h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9074</th>\n",
+       "      <td>9075  negative miss speeches alot tho</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7550</th>\n",
+       "      <td>7551 monk alone : complete solo studio recordi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8697</th>\n",
+       "      <td>8698 kyky  positive like \" leah ! school bouta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9421</th>\n",
+       "      <td>9422 lovin reeces came  positive free the city...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8867</th>\n",
+       "      <td>8868 to play charades my fami  positive love #...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7933</th>\n",
+       "      <td>7934 ah evet bebii u'r  positive lucky have ) ) )</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3843</th>\n",
+       "      <td>3844 ordered tickets while ago they havent cam...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5192</th>\n",
+       "      <td>5193 sicker a mf ( ( (</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   data\n",
+       "4096             4097 take prom harry ! bring friend me\n",
+       "892   893 can never get date a night owl i  negative...\n",
+       "6026  6027 ulti amate fighting championship classics...\n",
+       "8235  8236 starving there food take away sounds  pos...\n",
+       "5335   5336 not go school today spent whole day w | bae\n",
+       "7975  7976 ie7 users please note ! previous access  ...\n",
+       "6742  6743 aww yeah eco  positive pretty  negative h...\n",
+       "9074              9075  negative miss speeches alot tho\n",
+       "7550  7551 monk alone : complete solo studio recordi...\n",
+       "8697  8698 kyky  positive like \" leah ! school bouta...\n",
+       "9421  9422 lovin reeces came  positive free the city...\n",
+       "8867  8868 to play charades my fami  positive love #...\n",
+       "7933  7934 ah evet bebii u'r  positive lucky have ) ) )\n",
+       "3843  3844 ordered tickets while ago they havent cam...\n",
+       "5192                             5193 sicker a mf ( ( ("
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "real_test.data=pre_process(real_test.data)\n",
+    "real_test.sample(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred=sentiment_analysis(test)"
+    "import re\n",
+    "ids=[]   \n",
+    "for i in range (len(real_test)):\n",
+    "    text=real_test.data[i]\n",
+    "    found=re.findall('\\d+', text )\n",
+    "    ids.append(found[0])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OUTPUT_PATH = 'sample_submission.csv' \n",
+    "create_csv_submission(ids, y_pred, OUTPUT_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred=sentiment_analysis(real_test.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
