--- a/Simple_model.ipynb
+++ b/Simple_model.ipynb
@@ -6,14 +6,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Useful starting lines\n",
+    "## Useful starting lines\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from time import time\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.naive_bayes import MultinomialNB, BernoulliNB\n",
+    "from sklearn.linear_model import RidgeClassifier\n",
+    "from sklearn.neighbors import NearestCentroid\n",
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "from sklearn.ensemble import GradientBoostingClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cooc import *\n",
+    "from pickle_vocab import *\n",
+    "from preprocessing_final import pre_process\n",
+    "from helpers import *"
    ]
   },
   {
@@ -26,25 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cooc import *\n",
-    "#rom glove_template import *\n",
-    "from pickle_vocab import *\n",
-    "from preprocessing import pre_process\n",
-    "from helpers import *"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# creating training data\n",
-    "full_train=load_data()"
+    "## creating training data\n",
+    "full_train=load_data()\n",
+    "full_train.sample(5)"
    ]
   },
   {
@@ -122,17 +136,7 @@
     }
    ],
    "source": [
-    "full_train.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
+    "## split the data to train the models with 75% of full_train in train and 25% in test\n",
     "train , test=train_test_split(full_train)"
    ]
   },
@@ -160,8 +164,8 @@
     }
    ],
    "source": [
-    "# Extracting features from text files\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "## Extracting features from text files thanks to count vectorizer\n",
+    "np.random.seed(43)\n",
     "count_vect = CountVectorizer()\n",
     "X_train_counts = count_vect.fit_transform(train.data)\n",
     "X_train_counts.shape"
@@ -184,8 +188,8 @@
     }
    ],
    "source": [
-    "# TF-IDF\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "## TF-IDF matrix creation\n",
+    "\n",
     "tfidf_transformer = TfidfTransformer()\n",
     "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
     "X_train_tfidf.shape"
@@ -197,8 +201,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Training Naive Bayes (NB) classifier on training data.\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
+    "## Training Naive Bayes (NB) classifier on training data.\n",
+    "\n",
     "clf = MultinomialNB().fit(X_train_tfidf, train.target)"
    ]
   },
@@ -208,10 +212,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.pipeline import Pipeline\n",
+    "## pipeline for the model \n",
     "\n",
     "text_clf = Pipeline([('vect', CountVectorizer()), ('tfidf', TfidfTransformer()), ('clf', MultinomialNB())])\n",
-    "\n",
     "text_clf = text_clf.fit(train.data, train.target)"
    ]
   },
@@ -229,6 +232,8 @@
     }
    ],
    "source": [
+    "## predictions\n",
+    "\n",
     "predicted = text_clf.predict(test.data)\n",
     "print('Accuracy of Naive Bayes CLassifier: ', np.mean(predicted == test.target))"
    ]
@@ -254,7 +259,7 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import SGDClassifier\n",
+    "## SVM\n",
     "\n",
     "text_clf_svm = Pipeline([('vect', CountVectorizer()), ('tfidf', TfidfTransformer()),\n",
     "                         ('clf-svm', SGDClassifier(loss='hinge', penalty='l2',alpha=1e-5, max_iter=100, random_state=42))])\n",
@@ -430,11 +435,7 @@
     }
    ],
    "source": [
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from time import time\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "## logistic regression on TF-IDF and count vectorizer representations\n",
     "\n",
     "x_train, y_train, x_test, y_test= train.data, train.target, test.data, test.target\n",
     "\n",
@@ -452,7 +453,6 @@
     "cvec = CountVectorizer()\n",
     "lr = LogisticRegression(max_iter=1000)\n",
     "n_features = np.arange(10000,100001,10000)\n",
-    "#n=80000\n",
     "\n",
     "def nfeature_accuracy_checker(vectorizer=cvec, n_features=n_features, stop_words=None, ngram_range=(1, 1), classifier=lr):\n",
     "    result = []\n",
@@ -467,7 +467,6 @@
     "    \n",
     "    return result\n",
     "\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "tvec = TfidfVectorizer()\n",
     "\n",
     "feature_result_ugt = nfeature_accuracy_checker(vectorizer=tvec)\n",
@@ -651,6 +650,8 @@
     }
    ],
    "source": [
+    "## visualization of the n-gram tfidf vectorizer and n-gram count vectorizer, for different values of n\n",
+    "\n",
     "nfeatures_plot_tgt = pd.DataFrame(feature_result_tgt,columns=['nfeatures','validation_accuracy','train_test_time'])\n",
     "nfeatures_plot_bgt = pd.DataFrame(feature_result_bgt,columns=['nfeatures','validation_accuracy','train_test_time'])\n",
     "nfeatures_plot_ugt = pd.DataFrame(feature_result_ugt,columns=['nfeatures','validation_accuracy','train_test_time'])\n",
@@ -667,7 +668,16 @@
     "plt.title(\"N-gram(1~3) test result : Accuracy\")\n",
     "plt.xlabel(\"Number of features\")\n",
     "plt.ylabel(\"Validation set accuracy\")\n",
-    "plt.legend()\n"
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, the validation set accuracy is much lower for unigram tfidf and count vectorizer. \n",
+    "However, for bi- and tri-gram vectorizers, the accuracies are way higher and increase for an increase in the number of features."
    ]
   },
   {
@@ -743,36 +753,31 @@
     }
    ],
    "source": [
-    "from sklearn.svm import LinearSVC\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "from sklearn.naive_bayes import MultinomialNB, BernoulliNB\n",
-    "from sklearn.linear_model import RidgeClassifier\n",
-    "from sklearn.linear_model import PassiveAggressiveClassifier\n",
-    "from sklearn.linear_model import Perceptron\n",
-    "from sklearn.neighbors import NearestCentroid\n",
-    "from sklearn.feature_selection import SelectFromModel\n",
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "\n",
-    "names = [\"Logistic Regression\", \"Linear SVC\", \"LinearSVC with L1-based feature selection\",\"Multinomial NB\", \n",
-    "         \"Bernoulli NB\", \"Ridge Classifier\", \"AdaBoost\", \"Perceptron\",\"Passive-Aggresive\", \"Nearest Centroid\"]\n",
+    "## training of several simple models of names in 'names'\n",
+    "names = [\"Linear SVC\", \"LinearSVC with L1-based feature selection\", \n",
+    "         \"Bernoulli NB\", \"Ridge Classifier\", \"Nearest Centroid\"]\n",
     "classifiers = [\n",
-    "    LogisticRegression(),\n",
     "    LinearSVC(),\n",
     "    Pipeline([\n",
     "  ('feature_selection', SelectFromModel(LinearSVC(penalty=\"l1\", dual=False))),\n",
     "  ('classification', LinearSVC(penalty=\"l2\"))]),\n",
-    "    MultinomialNB(),\n",
     "    BernoulliNB(),\n",
     "    RidgeClassifier(),\n",
-    "    AdaBoostClassifier(),\n",
-    "    PassiveAggressiveClassifier(),\n",
     "    NearestCentroid(),\n",
     "   ]\n",
     "\n",
     "zipped_clf = zip(names,classifiers)\n",
     "n=90000\n",
     "\n",
-    "tvec = TfidfVectorizer()\n",
+    "tvec = TfidfVectorizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def classifier_comparator(vectorizer=tvec, n_features=10000, stop_words=None, ngram_range=(1, 1), classifier=zipped_clf):\n",
     "    result = []\n",
     "    vectorizer.set_params(stop_words=stop_words, max_features=n_features, ngram_range=ngram_range)\n",
@@ -785,9 +790,7 @@
     "        print (c)\n",
     "        clf_accuracy,tt_time = accuracy_summary(checker_pipeline, x_train, y_train, x_test, y_test)\n",
     "        result.append((n_features,clf_accuracy,tt_time))\n",
-    "    return result\n",
-    "\n",
-    "trigram_result = classifier_comparator(n_features=100000,ngram_range=(1,3))"
+    "    return result"
    ]
   },
   {
@@ -795,7 +798,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "trigram_result = classifier_comparator(n_features=100000,ngram_range=(1,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create submission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('twitter-datasets/test_data.txt') as f:\n",
+    "    real_test = f.readlines()\n",
+    "real_test={'data':real_test}\n",
+    "real_test=pd.DataFrame(real_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real_test.data=pre_process(real_test.data)\n",
+    "real_test.sample(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "ids=[]   \n",
+    "for i in range (len(real_test)):\n",
+    "    text=real_test.data[i]\n",
+    "    found=re.findall('\\d+', text )\n",
+    "    ids.append(found[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OUTPUT_PATH = 'sample_submission.csv' \n",
+    "create_csv_submission(ids, real_pred, OUTPUT_PATH)"
+   ]
   }
  ],
  "metadata": {
