--- a/run_file-1.ipynb
+++ b/run_file-1.ipynb
@@ -1579,6 +1579,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred=model"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1612,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1672,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1692,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1716,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1725,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1733,54 +1742,54 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "1350/1350 [==============================] - 12s 9ms/step - loss: 0.6238 - accuracy: 0.6545 - val_loss: 0.6078 - val_accuracy: 0.6697\n",
+      "1350/1350 [==============================] - 12s 8ms/step - loss: 0.6241 - accuracy: 0.6545 - val_loss: 0.6111 - val_accuracy: 0.6655\n",
       "Epoch 2/20\n",
-      "1350/1350 [==============================] - 12s 9ms/step - loss: 0.6044 - accuracy: 0.6725 - val_loss: 0.6012 - val_accuracy: 0.6723\n",
+      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.6045 - accuracy: 0.6730 - val_loss: 0.6022 - val_accuracy: 0.6739\n",
       "Epoch 3/20\n",
-      "1350/1350 [==============================] - 10s 8ms/step - loss: 0.5965 - accuracy: 0.6782 - val_loss: 0.6094 - val_accuracy: 0.6639\n",
+      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5965 - accuracy: 0.6783 - val_loss: 0.6021 - val_accuracy: 0.6704\n",
       "Epoch 4/20\n",
-      "1350/1350 [==============================] - 10s 7ms/step - loss: 0.5910 - accuracy: 0.6819 - val_loss: 0.5925 - val_accuracy: 0.6782\n",
+      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5912 - accuracy: 0.6825 - val_loss: 0.5984 - val_accuracy: 0.6769\n",
       "Epoch 5/20\n",
-      "1350/1350 [==============================] - 10s 7ms/step - loss: 0.5859 - accuracy: 0.6857 - val_loss: 0.5933 - val_accuracy: 0.6733\n",
+      "1350/1350 [==============================] - 10s 8ms/step - loss: 0.5856 - accuracy: 0.6862 - val_loss: 0.5980 - val_accuracy: 0.6793\n",
       "Epoch 6/20\n",
-      "1350/1350 [==============================] - 10s 7ms/step - loss: 0.5810 - accuracy: 0.6892 - val_loss: 0.5917 - val_accuracy: 0.6753\n",
+      "1350/1350 [==============================] - 10s 8ms/step - loss: 0.5802 - accuracy: 0.6884 - val_loss: 0.5974 - val_accuracy: 0.6783\n",
       "Epoch 7/20\n",
-      "1350/1350 [==============================] - 10s 7ms/step - loss: 0.5753 - accuracy: 0.6939 - val_loss: 0.5905 - val_accuracy: 0.6785\n",
+      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5748 - accuracy: 0.6943 - val_loss: 0.5950 - val_accuracy: 0.6791\n",
       "Epoch 8/20\n",
-      "1350/1350 [==============================] - 10s 8ms/step - loss: 0.5700 - accuracy: 0.6977 - val_loss: 0.5981 - val_accuracy: 0.6773\n",
+      "1350/1350 [==============================] - 12s 9ms/step - loss: 0.5691 - accuracy: 0.6985 - val_loss: 0.5951 - val_accuracy: 0.6801\n",
       "Epoch 9/20\n",
-      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5637 - accuracy: 0.7015 - val_loss: 0.5912 - val_accuracy: 0.6793\n",
+      "1350/1350 [==============================] - 12s 9ms/step - loss: 0.5626 - accuracy: 0.7037 - val_loss: 0.5938 - val_accuracy: 0.6824\n",
       "Epoch 10/20\n",
-      "1350/1350 [==============================] - 12s 9ms/step - loss: 0.5569 - accuracy: 0.7070 - val_loss: 0.5936 - val_accuracy: 0.6790\n",
+      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5559 - accuracy: 0.7073 - val_loss: 0.5949 - val_accuracy: 0.6801\n",
       "Epoch 11/20\n",
-      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5501 - accuracy: 0.7118 - val_loss: 0.5952 - val_accuracy: 0.6815\n",
+      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5493 - accuracy: 0.7118 - val_loss: 0.6056 - val_accuracy: 0.6812\n",
       "Epoch 12/20\n",
-      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5426 - accuracy: 0.7175 - val_loss: 0.6004 - val_accuracy: 0.6771\n",
+      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5415 - accuracy: 0.7175 - val_loss: 0.6026 - val_accuracy: 0.6800\n",
       "Epoch 13/20\n",
-      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5345 - accuracy: 0.7223 - val_loss: 0.6056 - val_accuracy: 0.6787\n",
+      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5338 - accuracy: 0.7227 - val_loss: 0.6068 - val_accuracy: 0.6837\n",
       "Epoch 14/20\n",
-      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5264 - accuracy: 0.7281 - val_loss: 0.6103 - val_accuracy: 0.6739\n",
+      "1350/1350 [==============================] - 12s 9ms/step - loss: 0.5255 - accuracy: 0.7280 - val_loss: 0.6108 - val_accuracy: 0.6805\n",
       "Epoch 15/20\n",
-      "1350/1350 [==============================] - 12s 9ms/step - loss: 0.5181 - accuracy: 0.7332 - val_loss: 0.6155 - val_accuracy: 0.6785\n",
+      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5174 - accuracy: 0.7334 - val_loss: 0.6152 - val_accuracy: 0.6814\n",
       "Epoch 16/20\n",
-      "1350/1350 [==============================] - 10s 8ms/step - loss: 0.5086 - accuracy: 0.7407 - val_loss: 0.6255 - val_accuracy: 0.6761\n",
+      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.5082 - accuracy: 0.7400 - val_loss: 0.6228 - val_accuracy: 0.6806\n",
       "Epoch 17/20\n",
-      "1350/1350 [==============================] - 10s 8ms/step - loss: 0.5003 - accuracy: 0.7449 - val_loss: 0.6249 - val_accuracy: 0.6767\n",
+      "1350/1350 [==============================] - 10s 8ms/step - loss: 0.5001 - accuracy: 0.7456 - val_loss: 0.6290 - val_accuracy: 0.6807\n",
       "Epoch 18/20\n",
-      "1350/1350 [==============================] - 10s 8ms/step - loss: 0.4912 - accuracy: 0.7503 - val_loss: 0.6391 - val_accuracy: 0.6767\n",
+      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.4908 - accuracy: 0.7514 - val_loss: 0.6319 - val_accuracy: 0.6797\n",
       "Epoch 19/20\n",
-      "1350/1350 [==============================] - 10s 8ms/step - loss: 0.4814 - accuracy: 0.7570 - val_loss: 0.6452 - val_accuracy: 0.6776\n",
+      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.4827 - accuracy: 0.7567 - val_loss: 0.6445 - val_accuracy: 0.6808\n",
       "Epoch 20/20\n",
-      "1350/1350 [==============================] - 10s 8ms/step - loss: 0.4730 - accuracy: 0.7614 - val_loss: 0.6568 - val_accuracy: 0.6766\n"
+      "1350/1350 [==============================] - 11s 8ms/step - loss: 0.4728 - accuracy: 0.7628 - val_loss: 0.6470 - val_accuracy: 0.6790\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x17db505cf40>"
+       "<keras.callbacks.History at 0x2884c8be790>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1804,26 +1813,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions=model_d2v_02.predict(X_test)"
+    "predictions_nn=model_d2v_02.predict(X_real_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "#converting back 0 predictions to smileys\n",
     "real_pred=[]\n",
     "\n",
-    "for i in range(len(predictions)):\n",
-    "    if (predictions[i]<0.5):\n",
+    "for i in range(len(predictions_nn)):\n",
+    "    if (predictions_nn[i]<0.5):\n",
     "        real_pred.append(':(')\n",
-    "    if (predictions[i]>=0.5):\n",
+    "    if (predictions_nn[i]>=0.5):\n",
     "        real_pred.append(':)')\n"
    ]
   },
@@ -2031,13 +2040,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "OUTPUT_PATH = 'sample_submission.csv' \n",
-    "create_csv_submission(ids, real_pred, OUTPUT_PATH)"
+    "create_csv_submission(ids,real_pred, OUTPUT_PATH)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
